--- a/drops_n_dropDuplicates.ipynb
+++ b/drops_n_dropDuplicates.ipynb
@@ -132,12 +132,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--   3 itv005857 supergroup        925 2023-05-23 13:05 /public/trendytech/datasets/library_data.json\n"
+      "-rw-r--r--   3 itv005857 supergroup        925 2023-05-23 13:05 /public/****/datasets/library_data.json\n"
      ]
     }
    ],
    "source": [
-    "! hadoop fs -ls /public/trendytech/datasets/library_data.json"
+    "! hadoop fs -ls /public/****/datasets/library_data.json"
    ]
   },
   {
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "! hadoop fs -cat /public/trendytech/datasets/library_data.json"
+    "! hadoop fs -cat /public/****/datasets/library_data.json"
    ]
   },
   {
@@ -178,7 +178,7 @@
     ".format(\"json\") \\\n",
     ".option(\"header\",\"true\") \\\n",
     ".option(\"inferSchema\",\"true\") \\\n",
-    ".load(\"/public/trendytech/datasets/library_data.json\")"
+    ".load(\"/public/****/datasets/library_data.json\")"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "book_df = spark.read.format(\"json\").schema(book_head).load(\"/public/trendytech/datasets/library_data.json\")"
+    "book_df = spark.read.format(\"json\").schema(book_head).load(\"/public/****/datasets/library_data.json\")"
    ]
   },
   {
@@ -359,7 +359,7 @@
     ".format(\"csv\") \\\n",
     ".option(\"header\",\"true\") \\\n",
     ".option(\"inferSchema\",\"true\") \\\n",
-    ".load(\"/public/trendytech/datasets/train.csv\")"
+    ".load(\"/public/****/datasets/train.csv\")"
    ]
   },
   {
